# helixtrace

./: .gitignore  DEMO_SCRIPT.md  HACKATHON_CHECKLIST.md  README.md  SUBMISSION.md  THIRD_PARTY_NOTICES.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: benchmark_overall.csv  benchmark_rows.csv  benchmark_summary.csv  benchmark_summary.json  file_recovery_benchmark.csv  file_recovery_benchmark.json
docs/: benchmark.md  ids-channel-model.md
scripts/: run_benchmark.py  run_file_benchmark.py  train_reranker.py
src/dna_trace_reconstruction/: __init__.py  __main__.py  ai_analyst.py  cli.py  constraints.py  file_codec.py  file_pipeline.py  ids_channel.py  learned_reranker.py  metrics.py  pipeline.py  reconstruction.py  source_design.py
src/dna_trace_reconstruction/data/: learned_reranker_v1.json
tests/: test_ai_analyst.py  test_app.py  test_cli.py  test_constraints.py  test_file_benchmark.py  test_file_codec.py  test_file_pipeline.py  test_ids_channel.py  test_learned_reranker.py  test_metrics.py  test_pipeline.py  test_reconstruction.py  test_source_design.py
